--- a/style.css
+++ b/style.css
@@ -6,7 +6,73 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
+
+#home {
+  height: calc(100vh - var(--header));
+  background-image: url(https://cdn.pixabay.com/photo/2015/12/01/15/43/black-1072366_1280.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+#home::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+#home > span {
+  position: absolute;
+
+  background: rgba(255, 255, 255, 0.07);
+  animation: morph 15s linear infinite alternate, spin 20s linear infinite;
+}
+#home > span:first-child {
+  top: 10%;
+  right: 60%;
+  width: 20%;
+  height: 30%;
+  border-radius: 59% 41% 63% 37% / 80% 67% 33% 20%;
+}
+#home > span:nth-child(2) {
+  top: 80%;
+  right: 40%;
+  width: 20%;
+  height: 80%;
+  border-radius: 59% 41% 63% 37% / 80% 33% 67% 20%;
+}
+#home > span:nth-child(3) {
+  top: 80%;
+  right: 6%;
+  width: 80%;
+  height: 80%;
+  border-radius: 59% 41% 33% 67% / 22% 33% 67% 78%;
+}
+#home > span:nth-child(4) {
+  top: -30%;
+  right: 0%;
+  width: 60%;
+  height: 70%;
+  border-radius: 59% 41% 84% 16% / 22% 72% 28% 78%;
+}
+#home > span:nth-child(5) {
+  top: 40%;
+  left: -30%;
+  width: 50%;
+  height: 60%;
+  border-radius: 35% 65% 84% 16% / 22% 33% 67% 78%;
+}
+#home > span:nth-child(6) {
+  top: 10%;
+  left: 80%;
+  border-radius: 35% 65% 53% 47% / 22% 67% 33% 78%;
+}
+
 .app {
   overflow: hidden;
 }
@@ -18,8 +84,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: #fff;
-  z-index: 10;
+  background-color: transparent;
+  z-index: 1000;
 }
 
 .header .header__name {
@@ -44,7 +110,7 @@
   justify-content: space-evenly;
 }
 .header__nav ul li {
-  color: #000;
+  color: #fff;
   font-size: 18px;
   text-transform: uppercase;
   padding: 12px;
@@ -61,12 +127,12 @@
   justify-content: space-between;
 }
 .body .body__content {
-  width: 50%;
+  width: 100%;
 }
 .body .body__content h5 {
-  color: #000;
-  font-weight: 600;
-  font-size: 24px;
+  color: var(--color__primary);
+  font-weight: 700;
+  font-size: 32px;
   margin-bottom: 24px;
   display: block;
   z-index: 1;
@@ -75,23 +141,28 @@
   height: 20%;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .body .body__content .css-typing {
+  margin: auto;
+  text-align: center;
   color: var(--active);
   font-weight: 600;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 48px;
   display: block;
   position: relative;
   top: 0;
-  width: 100%;
   height: 48px;
-  width: 100%;
+  width: 50%;
   /* overflow: hidden; */
 }
 .body .body__content .css-typing p {
+  width: 100%;
   font-size: 24px;
+  text-align: center;
 }
 
 .body .body__img {
@@ -122,7 +193,6 @@
   margin-top: 24px;
 }
 .css-typing {
-  width: 80%;
   height: 48px;
   overflow: hidden;
 }
@@ -221,6 +291,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  background-color: var(--background__primary);
+  padding: 100px 0;
 }
 .servvies__tiltle {
   width: 100%;
@@ -231,12 +303,13 @@
   margin-bottom: 50px;
 }
 .servvies__tiltle h1 {
-  color: var(--active);
+  color: #00c6ff;
   font-size: 48px;
   margin: 24px;
 }
 .servvies__tiltle p {
   opacity: 0.8;
+  color: #fff;
 }
 .services .services__item {
   width: 28%;
@@ -258,7 +331,7 @@
 .services .services__item h3 {
   padding: 12px;
   font-size: 32px;
-  color: var(--active);
+  color: var(--color__primary);
 }
 .services .services__item i {
   font-size: 48px;
@@ -286,7 +359,7 @@
   height: 100px;
   width: 100%;
   opacity: 0.7;
-  color: #060a5a;
+  color: #00c6ff;
   border-radius: 24px;
 }
 /*  hieu ung trang guong  */
@@ -353,32 +426,9 @@
   background-color: var(--background);
   padding-bottom: 100px;
 }
-.project__list__navigation {
-  position: relative;
+.protfolio {
+  height: 500px;
 }
-.project__list__navigation i {
-  color: #fff;
-  font-size: 48px;
-  background-color: rgba(32, 96, 198, 0.9);
-  border-radius: 50%;
-  cursor: pointer;
-}
-.project__list__navigation i:hover {
-  opacity: 0.7;
-}
-.project__list__navigation i:nth-child(1) {
-  position: absolute;
-  top: 200px;
-  left: -2%;
-  z-index: 11;
-}
-.project__list__navigation i:last-child {
-  position: absolute;
-  top: 200px;
-  right: -2%;
-  z-index: 11;
-}
-
 .project .project__title {
   text-align: center;
   padding-top: 100px;
@@ -392,6 +442,9 @@
 }
 .project .project__title p {
   color: #ccc;
+  width: 100%;
+  text-align: center;
+  display: block;
 }
 .wrap__project__list {
   overflow: hidden;
@@ -403,113 +456,65 @@
 .project__list {
   margin-top: 35px;
   display: flex;
-  height: 320px;
   /* flex-wrap: wrap; */
   justify-content: center;
   /* overflow: hidden; */
   transition: all 0.4s linear;
 }
-.project__list__item {
-  width: 16%;
-  height: 300px;
-  margin: 12px;
+
+.project__sub {
+  height: 400px;
+  padding: 24px 24px 48px 24px;
+  width: 80%;
+  background-color: var(--background__primary);
+  border-radius: 24px;
+}
+.project__sub > h1 {
+  padding-bottom: 50px;
+  padding-top: 25px;
   text-align: center;
-  border-radius: 8px;
-  box-shadow: 1px 1px 1px 1px rgb(21, 78, 177, 0.2);
-  transform: skew(-20deg, 0deg);
-  -moz-transform: skew(-20deg, 0deg);
-  -webkit-transform: skew(-20deg, 0deg);
-  -o-transform: skew(-20deg, 0deg);
-  -ms-transform: skew(-20deg, 0deg);
-  top: 0;
-  left: 0;
-  position: relative;
-  transition: top 0.2s linear, left 0.2s linear;
-  background: linear-gradient(to right, #00c6ff, #0072ff);
-  flex: 1 0 16%;
-  z-index: 10;
-  transition: all 0.5s ease-in-out;
+  color: var(--color__primary);
+  font-size: 24px;
+  font-weight: 700;
 }
-.project__list__sub__item {
-  position: absolute;
-  top: 20px;
+.describe {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80%;
 }
-.project__list__sub__item h4 {
-  background: linear-gradient(to right, #00c6ff, #0072ff);
-  color: #fff;
-  font-weight: 600;
-  position: absolute;
-  padding: 8px;
-  width: 32%;
-  top: 0;
-  left: -20%;
-  transform: translateX(50%);
-  border-radius: 8px 0px 8px 0px;
-  display: none;
-}
-.project__list__sub__item h1 {
-  color: var(--active);
-  font-weight: 900;
-  font-size: 32px;
-}
-.project__list__sub__item {
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  left: 0px;
-  bottom: 0px;
-  background: linear-gradient(to right, #00c6ff, #0072ff);
-  /* z-index: -2; */
-  border-radius: 0 8px 8px 0;
-  /* transition: all 0.1s ease; */
-
-  /* display: none; */
-}
-.project__list__sub__item span {
-  top: 0px;
-  right: 0px;
-  left: -0px;
-  bottom: -0px;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: none;
-}
-.project__list__sub__item img {
-  width: 100%;
+.describe .detail__project {
+  width: 48%;
+  background-color: rgba(255, 255, 255, 0.07);
   height: 100%;
-  border-radius: 8px 10px 10px 0;
+  padding: 24px 24px 0 24px;
+  border-radius: 24px;
 }
-.project__list__sub__item:hover {
-  top: -20px;
-  right: -20px;
-  left: 20px;
-  bottom: 20px;
-  border-right: 3px solid var(--active);
-  border-top: 3px solid var(--active);
-  transition: all 0.2s linear;
-}
-.project__list__sub__item::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: none;
-}
-.project__list__sub__item:hover::after {
-  display: block;
+.describe .detail__project > h1 {
+  color: var(--color_active);
+  font-size: 24px;
+  text-align: center;
+  padding-bottom: 12px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
 
-.project__list__sub__item:hover span,
-.project__list__sub__item:hover h4 {
-  display: block;
+.describe .wrap__img {
+  width: 48%;
+  height: 100%;
+  margin: 12px;
+  padding: 24px 24px 0 24px;
+  background-color: rgba(255, 255, 255, 0.07);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 24px;
+}
+.describe img {
+  width: 80%;
+  height: 80%;
+  border-radius: 12px;
 }
 
-.project__list__item:hover {
-  cursor: pointer;
-}
 .project__navbar {
   width: 100%;
   margin: 24px 0;
